Solved join us align and text size on how

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1101,7 +1101,9 @@ body{
     }
     .about--banner h2{
         margin-top:0;
-        font-size:55px
+        font-size:3.5em;
+        display:block;
+        width:90%;
     }
     .about--banner h2::before{
         top:43px;
@@ -1309,10 +1311,10 @@ body{
 }
 .work-request--options label{
     display:block;
-    width:200px;
+    width:150px;
     margin-bottom:30px;
     line-height:50px;
-    font-size:16px;
+    font-size:14px;
     font-weight:700;
     text-align:center;
     border:2px solid #fff;
@@ -1394,7 +1396,8 @@ body{
     }
     .work-request--options .options-a,.work-request--options .options-b{
         display:block;
-        width:auto
+        width:auto;
+        align-self: start;
     }
 }
 @media (max-width: 600px){
